tests/machine/x/pl/short_circuit.out
ERROR: /workspace/mochi/tests/machine/x/pl/short_circuit.pl:2:4: Syntax error: Operator expected
ERROR: /workspace/mochi/tests/machine/x/pl/short_circuit.pl:8:7: Syntax error: Operator expected

